--- a/package.json
+++ b/package.json
@@ -3,18 +3,33 @@
 	"version": "1.0.0",
 	"description": "quick compact builder for @html_first packages",
 	"main": "index.mjs",
+	"types": "./types/index.d.mts",
+	"module": "index.mjs",
+	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"dev": "concurrently \"bun --watch ./dev/index.mjs\" \"bun tsc --watch\"",
+		"test": "bun  ./dev/rollup.mjs"
 	},
-	"peerDependencies": {
+	"dependencies": {
+		"@rollup/plugin-node-resolve": "^16.0.0",
+		"@html_first/simple_queue": "^1.3.1",
 		"@rollup/plugin-alias": "^5.1.0",
-		"@rollup/plugin-node-resolve": "^15.2.3",
 		"@rollup/plugin-terser": "^0.4.4",
+		"chokidar": "^4.0.3",
+		"concurrently": "^9.1.1",
 		"cssnano": "^6.1.2",
 		"postcss": "^8.4.38",
 		"rollup": "^4.17.2",
 		"rollup-plugin-scss": "^3.0.0",
 		"sass": "^1.77.2"
+	},
+	"peerDependencies": {
+		"typescript": "^5.7.2"
+	},
+	"devDependencies": {
+		"@html_first/js_lib_template": "link:@html_first/js_lib_template",
+		"@types/bun": "latest",
+		"@html_first/atla-as_builder": "link:@html_first/atla-as_builder"
 	},
 	"repository": {
 		"type": "git",
