--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
 		"emitDeclarationOnly": true,
 		"outDir": "./types",
 		"module": "ESNext",
-		"target": "ES2020",
+		"target": "ESNext",
 		"moduleResolution": "node",
 		"esModuleInterop": true,
 		"skipLibCheck": true
